--- a/package.json
+++ b/package.json
@@ -28,7 +28,10 @@
     "build:desktop": "cd renderer && npx webpack --config webpack.config.js --mode production",
     "copy:assets": "mkdir -p renderer/dist/images && cp renderer/public/images/*.png renderer/dist/images/",
     "desktop:prepare": "npm run copy:assets && npm run build:desktop",
-    "desktop:run": "npm run desktop:prepare && npm start"
+    "desktop:run": "npm run desktop:prepare && npm start",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "lint:report": "eslint . --format html --output-file docs/eslint-report.html"
   },
   "keywords": [
     "turismo",
@@ -44,6 +47,7 @@
     "@babel/core": "^7.28.0",
     "@babel/preset-env": "^7.28.0",
     "@babel/preset-react": "^7.27.1",
+    "@eslint/js": "^9.31.0",
     "@jest/globals": "^29.5.0",
     "autoprefixer": "^10.4.21",
     "babel-loader": "^10.0.0",
@@ -53,6 +57,11 @@
     "electron": "^37.2.1",
     "electron-builder": "^26.0.12",
     "electron-packager": "^17.1.2",
+    "eslint": "^9.31.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
     "html-webpack-plugin": "^5.6.3",
     "jest": "^29.5.0",
     "postcss": "^8.5.6",
